--- a/Lab7_Model_comparison/Lab7_main_script.ipynb
+++ b/Lab7_Model_comparison/Lab7_main_script.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/anaconda3/envs/DataAnalytics/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from cmdstanpy import CmdStanModel\n",
@@ -27,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = 3\n",
-    "L = 13\n",
+    "F = 5\n",
+    "L = 9\n",
     "N = (L+F)*100"
    ]
   },
@@ -1941,7 +1950,7 @@
    "hash": "46f483167a09b22be2b898a042c5c1a13a22d7de263fb041cfbb484b78f7661a"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1955,9 +1964,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.13"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
